[package]
name = "kitten-tts-rs"
version = "0.2.2"
edition = "2021"
description = "Rust port of KittenTTS — ultra-lightweight ONNX-based text-to-speech"
license = "Apache-2.0"
repository = "https://github.com/second-state/kitten_tts_rs"
homepage = "https://github.com/second-state/kitten_tts_rs"

[[bin]]
name = "kitten-tts"
path = "src/main.rs"

[[bin]]
name = "kitten-tts-server"
path = "src/bin/kitten-tts-server/main.rs"

[lib]
name = "kitten_tts"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
hound = "3.5"
mp3lame-encoder = "0.2"
flacenc = "0.5"
audiopus = "0.2"
audiopus_sys = { version = "0.1", features = ["static"] }
ogg = "0.9"
symphonia = { version = "0.5", features = ["mp3", "aac", "flac", "ogg", "wav"] }
ndarray = "0.17"
ort = "2.0.0-rc.12"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-normalization = "0.1"
zip = "2"

# Server dependencies
axum = "0.8"
base64 = "0.22"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Optional GPU acceleration
# Enable via: cargo build --features cuda
# or: cargo build --features coreml

[features]
default = []
cuda = ["ort/cuda"]
tensorrt = ["ort/tensorrt"]
coreml = ["ort/coreml"]
directml = ["ort/directml"]
